--- a/Cloudents.Web/ClientApp/components/registration/steps/registerUsername/registerUsername.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerUsername/registerUsername.less
@@ -1,1 +1,10 @@
 @import "../../../../mixin.less";
+.registration .step-wrapper {
+  input {
+    margin-top: 32px;
+    padding-left: 50px;
+  }
+  .continue-btn {
+    margin-top: 34px;
+  }
+}
