--- a/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
@@ -1,1 +1,82 @@
 @import "../../../../mixin.less";
+
+.registration .step-wrapper {
+  input {
+    margin-top: 30px;
+    padding-left: 52px;
+  }
+  .continue-btn {
+    margin-top: 50px;
+  }
+}
+
+.registration .step-wrapper .done{
+  h1{
+    margin-bottom: 6px;
+  }
+  .continue-btn {
+    margin-top: 140px;
+  }
+}
+
+.overlay.overlay--active:before {
+  background-color: #3532d5;
+  opacity: 0.76;
+}
+
+.dialog {
+  text-align: center;
+  h1 {
+    font-size: 26px;
+    font-weight: bold;
+    letter-spacing: -0.5px;
+    text-align: center;
+    color: #3532d5;
+  }
+  p {
+    font-size: 18px;
+    letter-spacing: -0.3px;
+    text-align: center;
+    color: #4a4a4a;
+    margin-top: 14px;
+    margin-bottom: 18px;
+    line-height: 1.5;
+
+    b {
+      font-weight: bold;
+      color: #3532d5;
+      display: block;
+      margin-bottom: 4px;
+    }
+  }
+  input {
+    padding-left: 52px;
+    height: 48px;
+    border-radius: 4px;
+    border: solid 1px #979797;
+    width: 100%;
+    font-size: 18px;
+    letter-spacing: -0.5px;
+    margin-bottom: 4px;
+  }
+
+  .continue-btn {
+    background: #3532d5;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.39;
+    letter-spacing: -0.5px;
+    color: #ffffff;
+    width: 100%;
+    height: @registrationFieldHeight;
+    margin-top: 28px;
+  }
+
+  .limited-width {
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 32px 0;
+  }
+
+}
