--- a/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
@@ -1,65 +1,79 @@
 @import "../../../../mixin.less";
-.google-signin {
-  background: #4285f4;
-  font-size: 18px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: -0.5px;
-  text-align: center;
-  color: #ffffff;
-  width: 100%;
-  height: @registrationFieldHeight;
-}
 
-.seperator-text {
-  display: flex;
-  align-items: center;
-  margin: 26px 0 30px 0;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: -0.3px;
-  color: #888b8e;
-
-  &:before, &:after {
-    content: '';
+.registration .step-wrapper {
+  .google-signin {
+    background: #4285f4;
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: -0.5px;
+    text-align: center;
+    color: #ffffff;
     width: 100%;
-    background: #888b8e;
-    height: 1px;
-    display: block;
+    height: @registrationFieldHeight;
+    margin-top: 26px;
   }
 
-  span {
-    flex-shrink: 0;
-    padding: 0 12px;
-  }
-}
+  .seperator-text {
+    display: flex;
+    align-items: center;
+    margin: 26px 0 30px 0;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: -0.3px;
+    color: #888b8e;
 
-.email-field {
-  width: 100%;
-  height: @registrationFieldHeight;
-  border: 1px solid #979797;
-  padding-left: 54px;
-  margin-bottom: 16px;
-  font-size: 18px;
-  letter-spacing: -0.5px;
+    &:before, &:after {
+      content: '';
+      width: 100%;
+      background: #888b8e;
+      height: 1px;
+      display: block;
+    }
 
-}
-
-.signin-strip {
-  color: #888b8e;
-  font-size: 18px;
-  letter-spacing: -0.5px;
-  text-align: center;
-  color: #888b8e;
-  margin-top: 20px;
-
-  @media (max-width: @screen-xs) {
-    margin-top: 12px;
+    span {
+      flex-shrink: 0;
+      padding: 0 12px;
+    }
   }
 
-  button {
-    color: #3293f6;
+  .email-field {
+    padding-left: 54px;
+    margin-top: 0;
+  }
+
+  .continue-btn {
+    margin-top: 16px;
+  }
+
+  .signin-strip {
+    color: #888b8e;
+    font-size: 18px;
+    letter-spacing: -0.5px;
+    text-align: center;
+    color: #888b8e;
+    margin-top: 20px;
+
+    @media (max-width: @screen-xs) {
+      margin-top: 12px;
+    }
+
+    button {
+      color: #3293f6;
+    }
+  }
+
+  .email {
+    margin-top: 6px;
+  }
+  .email-check {
+    margin: 22px auto 64px auto;
+  }
+  .resend-title {
+    font-size: 14px;
+    letter-spacing: -0.4px;
+    color: #888b8e;
   }
 }
