--- a/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
@@ -1,9 +1,27 @@
 @import "../../../../mixin.less";
-select{ // TODO: this is temporally - we need to decide what element to implement here
-  width: 100%;
-  height: 48px;
-  border: 1px solid;
-  padding: 10px;
-  font-size: 16px;
-  -webkit-appearance: menulist;
+
+.registration .step-wrapper {
+
+
+  .phone-field {
+    margin-top: 24px;
+    padding-left: 36px;
+  }
+  .code-field {
+    margin-top: 20px;
+    padding-left: 50px;
+    margin-bottom: 4px;
+  }
+  .continue-btn {
+    margin-top: 40px;
+    &.submit-code{
+        margin-top: 12px;
+    }
+  }
+  .phone-num{
+    margin-top: 6px;
+  }
+  .confirm-title{
+    letter-spacing: -0.3px;
+  }
 }
