--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -99,7 +99,8 @@ button {
 @color-blue: #3293f6;
 @color-dark-blue:#302eb5;
 @color-green: #7ed321;
-@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue,green,dark-blue;
+@color-transparent: transparent;
+@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue,green,dark-blue,transparent;
 
 
 .loop2(@index2) when (@index2 <= length(@list-colors)) {
