some registration issues fixes

--- a/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
@@ -1,27 +1,29 @@
 @import "../../../../mixin.less";
 
-.registration .step-wrapper {
-  input {
-    margin-top: 30px;
-    padding-left: 52px;
-  }
-  .continue-btn {
-    margin-top: 50px;
-  }
-}
+.register-account {
+  .step-wrapper {
+    input {
+      margin-top: 30px;
+      padding-left: 52px;
+    }
+    .continue-btn {
+      margin-top: 50px;
+    }
 
-.registration .step-wrapper .done{
-  h1{
-    margin-bottom: 6px;
-  }
-  .continue-btn {
-    margin-top: 140px;
-  }
-}
+    .done {
+      h1 {
+        margin-bottom: 6px;
+      }
+      .continue-btn {
+        margin-top: 140px;
+      }
+    }
 
-.overlay.overlay--active:before {
-  background-color: #3532d5;
-  opacity: 0.76;
+    .overlay.overlay--active:before {
+      background-color: #3532d5;
+      opacity: 0.76;
+    }
+  }
 }
 
 .dialog {
