Design changes + added close warning popup

--- a/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
@@ -1,8 +1,10 @@
 @import "../../../../mixin.less";
 
-.registration .step-wrapper {
+@google-btn-bg: #4285f4;
+
+.step-email .step-wrapper {
   .google-signin {
-    background: #4285f4;
+    background: @google-btn-bg;
     font-size: 18px;
     font-weight: normal;
     font-style: normal;
@@ -14,6 +16,12 @@
     width: 100%;
     height: @registrationFieldHeight;
     margin-top: 26px;
+  }
+
+  .sbf-google-icon {
+    color: @google-btn-bg;
+    background: white;
+    border-radius: 100%;
   }
 
   .seperator-text {
@@ -38,10 +46,18 @@
       padding: 0 12px;
     }
   }
-
-  .email-field {
-    padding-left: 54px;
-    margin-top: 0;
+  .input-wrapper {
+    .email-field {
+      padding-left: 54px;
+      margin-top: 0;
+    }
+    i {
+      position: absolute;
+      left: 16px;
+      top: 17px;
+      line-height: normal;
+      font-size: 18px;
+    }
   }
 
   .continue-btn {
@@ -75,5 +91,8 @@
     font-size: 14px;
     letter-spacing: -0.4px;
     color: #888b8e;
+  }
+  .recaptcha-wrapper {
+    margin: 30px 0 10px 0;
   }
 }
