--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -114,6 +114,8 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-M2BGS2G');</script>
     <!-- End Google Tag Manager -->
+
+    <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
