--- a/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
@@ -1,27 +1,41 @@
 @import "../../../../mixin.less";
 
-.registration .step-wrapper {
-
-
-  .phone-field {
+.step-phone .step-wrapper {
+  .input-wrapper {
     margin-top: 24px;
-    padding-left: 36px;
+
+    .phone-field {
+      padding-left: 36px;
+      margin-top: 0;
+
+      ~ i {
+        position: absolute;
+        top: 14px;
+        left: 16px;
+      }
+    }
   }
   .code-field {
-    margin-top: 20px;
+    margin-top: 0;
     padding-left: 50px;
     margin-bottom: 4px;
+
+    ~ i {
+      position: absolute;
+      top: 14px;
+      left: 16px;
+    }
   }
   .continue-btn {
     margin-top: 40px;
-    &.submit-code{
-        margin-top: 12px;
+    &.submit-code {
+      margin-top: 12px;
     }
   }
-  .phone-num{
+  .phone-num {
     margin-top: 6px;
   }
-  .confirm-title{
+  .confirm-title {
     letter-spacing: -0.3px;
   }
 }
