--- a/Cloudents.Web/ClientApp/components/registration/steps/registerUsername/registerUsername.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerUsername/registerUsername.less
@@ -3,7 +3,7 @@
 .step-username .step-wrapper {
   .input-wrapper {
     margin-top: 32px;
-    input {
+    .input-field {
       padding-left: 50px;
       margin-top: 0;
     }
