Start implement Answer question page

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-text-area/questionTextArea.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-text-area/questionTextArea.less
@@ -1,9 +1,10 @@
-@import "../../../mixin.less";
+@import "../../../../mixin.less";
 
 
 .question_area {
   border: 8px solid #c7c7ee !important;
   height: 233px;
+  background-color: @color-white;
 
   @media (max-width: @screen-xs) {
     height: 249px;
