Started verticals redesign implementation

--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -33,5 +33,23 @@
                 height: 3px;
             }
         }
+
+        .vertical-title{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 32px;
+            border-radius: 4px;
+            color: white;
+            font-size: 14px;
+            font-weight: 600;
+
+            i{
+                font-size: 21px;
+                margin-right: 8px;
+                margin-bottom: 0;
+            }
+        }
     }
 }
