--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -35,7 +35,7 @@ button {
 }
 
 
-
+@vertical-marketplace: #d0021b;
 @vertical-ask: #0455a8;
 @vertical-note: #320161;
 @vertical-flashcard: #f14d4d;
@@ -50,7 +50,7 @@ button {
 //@vertical-course: #2adaff;
 //@vertical-like: #7ed321;
 //@vertical-setting: #07305a;
-@list-verticals: ask,flashcard,note,tutor,book,food,job;
+@list-verticals: marketplace, ask,flashcard,note,tutor,book,food,job;
 
 .horizontal-variant(@variant,@p) {
     @color: "vertical-@{variant}"; 
