--- a/Cloudents.Web/ClientApp/components/question/view/question.less
+++ b/Cloudents.Web/ClientApp/components/question/view/question.less
@@ -1,4 +1,27 @@
+@import "../../../mixin.less";
+
 .answer-question{
+    .top-block{
+        font-size: 12px;
+        font-weight: 600;
+        margin-bottom: 16px;
+        a.ask-question{
+            height: 32px;
+            border-radius: 4px;
+            background-color: #125fac;            
+            color: @color-white;
+            padding: 7px 8px 6px;
+            display: inline-block;
+            .sbf{margin: 0 4px;}
+            .sbf-comment:before{color: @color-white; font-size: 16px;}
+        }
+        span.question-category{
+            margin: 0 2px;
+            color: #4a4a4a;
+        }
+    }
+
+    .md5{margin-left: 17px;}
     
     .user-question {
         margin-bottom: 17px;
@@ -16,6 +39,21 @@
             background-color: #3532d5 !important;
           }
     }
+
+    .tab-padding{padding:8px;}
+
+    .tabs__container{
+
+        .tabs__item{
+            text-transform: none;
+            &.tabs__item--active{ color: #3532d5!important;font-weight: bold;}
+        } 
+        
+        .tabs__slider.blue{
+            border-bottom: 2px solid #3532d5;
+        }
+    }
+    
    
 }
 
