--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -2,7 +2,7 @@
 
 .question-card {
     border-radius: 4px;
-    background-color: #ffffff;
+    background-color: @color-white;
     box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
     min-height: 300px;
     width: 100%;
@@ -39,7 +39,7 @@
             font-size: 14px;
             font-weight: bold;
             line-height: 1.79;
-            color: #3532d5;
+            color: @color-main-purple;
             position: absolute;
             top: 8px;
             right: 15px;
@@ -47,18 +47,16 @@
             i.sbf{
                 width: 25px;
                 height: 25px;
-                background-color: #ffffff;
-                border: solid 1px #3532d5;
+                background-color: @color-white;
+                border: solid 1px @color-main-purple;
                 border-radius: 15px;
-                color: #3532d5;
+                color: @color-main-purple;
     
                 &.upvotes{transform: scale(1, -1);}
             }
             
         }
-    }
-
-    
+    }    
 
     .q-category{
         font-size: 20px;
@@ -73,9 +71,27 @@
         text-align: left;
         color: #4a4a4a;
     }
-    .q-user-info{
+
+    .answer,.q-user-info{
         position: absolute;
-        bottom: 0;
+    }
+
+    .answer{
+        bottom: 17px;
+        right: 17px;
+        height: 24px;
+        .answer-btn{
+            
+            border-radius: 4px;
+            background-color: #0455a8;
+            font-size: 14px;
+            color: @color-white;
+            padding: 3px 20px;
+              
+        }
+    }
+    .q-user-info{  
+        bottom: 0;      
         height: 47px;
         width: 100%;
         border-top: 1px solid #ddd;
@@ -87,7 +103,7 @@
             width: 25px;
             height: 25px;
             border-radius: 15px;
-            background-color: #ffffff;
+            background-color: @color-white;
             box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
             margin: 10px 10px 13px 17px;
         }
