Fixed some header stuff

--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -51,5 +51,8 @@
                 margin-bottom: 0;
             }
         }
+        .tabs__bar .tabs__li {
+            flex-basis: auto;
+        }
     }
 }
