Added get question api call client side implementation

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -10,7 +10,7 @@
     p{margin: 17px 19px 17px 17px;}
 
     .q-price{
-        width: 84px;
+        //width: 84px;
         height: 47px;
         overflow: hidden;
         border-radius: 0 0 36px;
@@ -21,9 +21,12 @@
         font-size: 22px;
         font-weight: bold;
         color: #000000;
-        position: relative;
+        //position: relative;
         text-align: center;
         padding-bottom: 7px;
+        padding-right: 16px;
+        padding-left: 12px;
+        display: inline-block;
 
 
         span{margin: 5px 0px 10px; display: block;}
