--- a/Cloudents.Web/ClientApp/components/chat/private-chat/private-chat.less
+++ b/Cloudents.Web/ClientApp/components/chat/private-chat/private-chat.less
@@ -36,9 +36,9 @@
         min-height: 350px;
         display: flex;
 
-        .empty-chat{
+        .no-messages{
             margin: auto;
-            width: 205px;
+            width: 100%;
             height: 300px;
             text-align: center;
 
