--- a/Cloudents.Web/ClientApp/components/chat/view/chat.less
+++ b/Cloudents.Web/ClientApp/components/chat/view/chat.less
@@ -1,6 +1,7 @@
 @import "../../../mixin.less";
 
 .chat-page{
+    
 
     margin-top: 16px;
 
@@ -39,6 +40,31 @@
         background-color: @color-white;
         border: solid 1px @Dividers;
         border-radius: 4px;
+
+        .header-block{
+            font-size: 14px;
+            display: flex;
+            justify-content: space-between;
+            height: 54px;
+            align-items: center;
+            padding: 19px 14px 19px 23px;
+
+            button{outline: none;}
+
+            .sbf{    
+                transform: scale(-1, 1);
+                font-size: 12px;
+                color: @color-main-purple;
+                margin-right: 25px;
+            }
+            .some-icon{
+                width: 33px;
+                height: 33px;
+                border-radius: 15px;
+                background-color: @color-white;
+                box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+            }
+        }
     }
 
     .tab-padding{
