--- a/Cloudents.Web/ClientApp/components/question/view/question.less
+++ b/Cloudents.Web/ClientApp/components/question/view/question.less
@@ -13,7 +13,7 @@
             padding: 7px 8px 6px;
             display: inline-block;
             .sbf{margin: 0 4px;}
-            .sbf-comment:before{color: @color-white; font-size: 16px;}
+            .sbf-ask-q:before{color: @color-white; font-size: 16px;}
         }
         span.question-category{
             margin: 0 2px;
@@ -42,7 +42,15 @@
           }
     }
 
-    .tab-padding{padding:8px;}
+    .tab-padding{padding:8px; margin-bottom: 40px;}
+
+    .tabs__bar{
+        height: 65px;
+        background-color: @color-white;
+        border-bottom: solid 1px #bbbbbb;
+        font-size: 18px;
+        padding: 0 8px;
+    }
 
     .tabs__container{
 
