--- a/Cloudents.Web/ClientApp/components/question/ask/ask-question.less
+++ b/Cloudents.Web/ClientApp/components/question/ask/ask-question.less
@@ -1,7 +1,6 @@
 @import "../../../mixin.less";
 
 
-
 .ask_question {
   .container {
     max-width: 610px;
@@ -19,110 +18,108 @@
   .flex:not(:last-child) {
     margin-bottom: 17px;
   }
-}
 
-.back-button {
-  float: right;
-  top: 4px;
-  right: 5px;
-  width: 17px;
-  position: relative;
-  outline: none;
 
-  .icon {
-    color: #3532d5;
-    font-size: 14pt;
-  }
-  @media (max-width: @screen-xs) {
-    .back-button {
-      right: 4px;
+  .back-button {
+    float: right;
+    top: 5px;
+    right: 0px;
+    width: 17px;
+    position: relative;
+    outline: none;
 
-      .icon {
-        color: #3532d5;
-        font-size: 16px;
-      }
-    }
-  }
-}
+    @media (max-width: @screen-xs) {top: 9px;}
 
-.student_icon {
-  display: inline-flex;
-  width: 49px;
-  height: 46px;
-  border-radius: 4px;
-  background-color: #ffffff;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
-  top: 9px;
-  position: relative;
-  margin-right: 11px;
-
-  img {
-    width: 31px;
-    height: 29px;
-    margin: 10px 9px;
-  }
-
-  @media (max-width: @screen-xs) {
-    .student_icon {
-      width: 33px;
-      height: 33px;
-      top: 3px;
-
-      img {
-        width: 20px;
-        height: 19px;
-        margin: 7px 6px;
-      }
-    }
-  }
-}
-
-.text-blue {
-  font-size: 15px;
-  font-weight: bold;
-  line-height: 1.39;
-  letter-spacing: 0;
-  color: #3532d5;
-  margin: 0;
-}
-
-.small-bold {
-  font-size: 11px;
-  font-weight: bold;
-}
-
-.header-row {
-  margin: -8px 0px 8px;
-  @media (max-width: @screen-xs) {
-    margin: 14px 0px 0px;
-  }
-
-  .text-blue {
-    font-size: 18px;
-    font-weight: normal;
-    letter-spacing: 0;
-
-    @media (max-width: @screen-xs) {
+    .icon {
+      color: #3532d5;
       font-size: 16px;
     }
   }
-}
 
-select {
-  width: 100%;
-  height: 41px;
-  border: 1px solid #979797;
-  color: #3532d5;
-  padding: 10px;
-  font-size: 14px;
-  -webkit-appearance: menulist;
+  .student_icon {
+    display: inline-flex;
+    width: 49px;
+    height: 46px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+    top: 9px;
+    position: relative;
+    margin-right: 11px;
 
-  @media (max-width: @screen-xs) {
-    padding: 9px;
+    @media (max-width: @screen-xs) {
+      width: 33px;
+      height: 33px;
+      top: 3px;}
+
+    img {
+      width: 31px;
+      height: 29px;
+      margin: 10px 9px;
+      @media (max-width: @screen-xs) { 
+        width: 20px;
+        height: 19px;
+        margin: 7px 6px;}
+
+    }
   }
-}
 
-.ask_question {
+  .text-blue {
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 1.39;
+    letter-spacing: 0;
+    color: #3532d5;
+    margin: 0;
+  }
+
+  .small-bold {
+    font-size: 11px;
+    font-weight: bold;
+  }
+
+  .header-row {
+    margin: -8px 0px 8px;
+    @media (max-width: @screen-xs) {
+      margin: 14px 0px 0px;
+    }
+
+    .text-blue {
+      font-size: 18px;
+      font-weight: normal;
+      letter-spacing: -0.4px;
+
+      @media (max-width: @screen-xs) {
+        font-size: 16px;
+
+      }
+    }
+  }
+
+  select {
+    width: 100%;
+    height: 41px;
+    border: 1px solid #979797;
+    color: #3532d5;
+    padding: 10px;
+    font-size: 14px;
+    -webkit-appearance: menulist;
+
+    @media (max-width: @screen-xs) {
+      padding: 9px;
+    }
+  }
+
+  .last-text-block {
+    margin: 26px 0px 26px -1px;
+  
+    @media (max-width: @screen-xs) {
+      margin: -4px 0px 20px 2px;
+    }
+  }
+
+
+
   .btn.ask_btn {
     position: relative;
     height: 48px;
@@ -142,12 +139,6 @@ select {
   .ask_btn.primary {
     background-color: #3532d5 !important;
   }
+
 }
 
-.last-text-block {
-  margin: 26px 0px 26px -1px;
-
-  @media (max-width: @screen-xs) {
-    margin: -4px 0px 20px 2px;
-  }
-}
